feedback:Rename SummariesResponse & move interfaces to common
